# lj_fun

./: .gitignore  CMakeLists.txt  Makefile  Makefile.save  README  RenderSort.cmake  TODO  domake  makefile.project  makefile.tags
BGame/: .gitignore  BG_main.c  BGame.cmake  CMakeLists.txt  LJ_project.h  Makefile  hello.cpp  main.c
GitP4Test/: edits.txt  log.txt  my_update  p4edits
GitP4Test/LJ_Engine/: LJ_ROOT.cmake
GitP4Test/LJ_Engine/LJ_LibCommon/: LJ_LibCommon.h
GitP4Test/LJ_Engine/LJ_LibCommon/LJ_Base/: LJ_output.h  LJ_str.h  LJ_types.h
GitP4Test/LJ_Engine/LJ_LibCommon/LJ_Base/LJ_LINUX/: LJ_typesLINUX.h
GitP4Test/LJ_Engine/LJ_LibCommon/LJ_Base/LJ_WIN/: LJ_typesWIN.h
GitP4Test/LJ_Engine/LJ_LibCommon/LJ_File/: LJ_filesystem.c  LJ_filesystem.h
GitP4Test/LJ_Engine/LJ_LibCommon/LJ_Math/: LJ_math.h
GitP4Test/LJ_Engine/LJ_LibCommon/LJ_Mem/: LJ_memDebug.c
GitP4Test/LJ_Engine/LJ_LibDebug/LJ_DebugVar/: LJ_debugVar.c
GitP4Test/LJ_Engine/LJ_LibEngine/: CMakeLists.txt  LJ_engine.c
GitP4Test/LJ_Engine/LJ_LibGUI/: LJ_LibGUI.h  LJ_fltk.cpp  LJ_gui.c
GitP4Test/LJ_Engine/LJ_LibGraphics/: CMakeLists.txt  LJ_graphics.c
GitP4Test/LJ_Engine/LJ_LibGraphics/LJ_Sprite/: LJ_sprite.c
GitP4Test/LJ_Engine/LJ_LibGraphics/LJ_Texture/: LJ_texture.c  LJ_texture.h
GitP4Test/LJ_Engine/LJ_LibInput/: LJ_input.h  LJ_internal_key.h  LJ_mouse.h
GitP4Test/LJ_Engine/LJ_LibUnitTest/: LJ_LibUnittest.h  LJ_unittest.h  LJ_unittest_filesystem.c  LJ_unittest_math.c  LJ_unittest_register.c  LJ_unittest_tests.c
LJ_Engine/: LJ.h  LJ_ROOT.cmake
LJ_Engine/LJ_LibCommon/: CMakeLists.txt  LJ_LibCommon.h
LJ_Engine/LJ_LibCommon/LJ_Base/: LJ_assert.c  LJ_assert.h  LJ_base.c  LJ_base.h  LJ_mem.c  LJ_mem.h  LJ_output.c  LJ_output.h  LJ_str.c  LJ_str.h  LJ_types.c  LJ_types.h
LJ_Engine/LJ_LibCommon/LJ_Base/LJ_WIN/: LJ_typesWIN.h
LJ_Engine/LJ_LibCommon/LJ_File/: LJ_file.h  LJ_filehandle.h  LJ_filesystem.c  LJ_filesystem.h  lj_file.c
LJ_Engine/LJ_LibCommon/LJ_Math/: LJ_math.c  LJ_math.h
LJ_Engine/LJ_LibCommon/LJ_Mem/: LJ_mem.c  LJ_mem.h  LJ_memAlloc.c  LJ_memAlloc.h  LJ_memDebug.c  LJ_memDebug.h
LJ_Engine/LJ_LibDebug/: CMakeLists.txt  LJ_LibDebug.h
LJ_Engine/LJ_LibDebug/DebugVar/: debugVar.c  debugVar.h
LJ_Engine/LJ_LibDebug/LJ_DebugVar/: LJ_debugVar.c  LJ_debugVar.h
LJ_Engine/LJ_LibDebug/debugVar/: debugVar.c
LJ_Engine/LJ_LibEngine/: CMakeLists.txt  LJ_LibEngine.h  LJ_engine.c  LJ_engine.h  engine.c  engine.h
LJ_Engine/LJ_LibGUI/: CMakeLists.txt  LJ_fltk.cpp  LJ_fltk.h  LJ_gui.h
LJ_Engine/LJ_LibGraphics/: CMakeLists.txt  LJ_LibGraphics.h  LJ_graphics.c  LJ_graphics.h
LJ_Engine/LJ_LibGraphics/LJ_Sprite/: LJ_sprite.c  LJ_sprite.h
LJ_Engine/LJ_LibGraphics/LJ_Texture/: LJ_texture.c  LJ_tga.h
LJ_Engine/LJ_LibInput/: CMakeLists.txt  LJ_LibInput.h  LJ_input.c  LJ_input.h  LJ_internal_key.h  LJ_internal_mouse.h  LJ_key.c  LJ_key.h  LJ_mouse.c  LJ_mouse.h
LJ_Engine/LJ_LibUnitTest/: CMakeLists.txt  LJ_unittest.c  LJ_unittest.h  LJ_unittest_filesystem.c  LJ_unittest_math.c  LJ_unittest_mem.c  LJ_unittest_register.c  LJ_unittest_str.c  LJ_unittest_tests.c  LJ_unittest_texture.c
LJ_LibDebug/: CMakeLists.txt
RenderSort/: .gitignore  CMakeLists.txt  LJ_project.h  Makefile  README  RS_main.c  RS_renderSort.c  RS_renderSort.h  RenderSort.cmake  main.c  renderSort.c  renderSort.h
Unittest/: .gitignore  CMakeLists.txt  LJ_project.h  Makefile  UN_main.c  Unittest.cmake  unittest
libdebug/: CMakeLists.txt
libdebug/debugVar/: debugVar.h
