CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TEST)

#Global definitions
SET(GLOBAL_CFLAGS -Wall -Werror -Wdeclaration-after-statement)
SET(GLOBAL_DEFINITIONS ${GLOBAL_CFLAGS} ${CONFIG_CFLAGS})
SET(GLOBAL_INCLUDE_DIRECTORIES ${TEST_SOURCE_DIR}/libdebug)
SET(GLOBAL_LINK_DIRECTORIES ${TEST_BINARY_DIR}/libdebug)


#if you don't want the full compiler output, remove the following line
SET(CMAKE_VERBOSE_MAKEFILE ON)

ADD_SUBDIRECTORY(libdebug)
ADD_SUBDIRECTORY(RenderSort)
